--- a/src/App.css
+++ b/src/App.css
@@ -15,25 +15,26 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 30px;
 }
 
 .App-header h1 {
   padding: 30px;
   margin: 0;
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .App-header h2 {
   padding: 0;
   margin: 0;
-  font-size: 30px;
+  font-size: 20px;
   color: #666666;
 }
 
